替换图片的路径。